--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <div class="headerLogo">KL</div>
-      <nav>
-        <ul>
+      <nav id="navmenu">
+        <ul id="Showmenu">
           <li>Nav 1</li>
           <li>Nav 2</li>
           <li>Nav 3</li>
