--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <header>
       <div class="headerLogo">KL</div>
-      <nav id="navmenu">
-        <ul id="Showmenu">
-          <li>Nav 1</li>
-          <li>Nav 2</li>
-          <li>Nav 3</li>
+      <nav id="navmenu" class="navmenu">
+        <ul id="Showmenu" class="hidden">
+          <li>Hjem</li>
+          <li>Om meg</li>
+          <li>Portfolio</li>
         </ul>
       </nav>
     </header>
