--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="headerLogo">KL</div>
       <nav id="navmenu" class="navmenu">
-        <ul id="Showmenu" class="hidden">
+        <ul id="Showmenu" class="Showmenu hidden">
           <li>Hjem</li>
           <li>Om meg</li>
           <li>Portfolio</li>
